[project]
name = "cex-mirror"
version = "0.1.0"
description = "Lightweight, multi-pair, in-memory Binance -> my_cex order book mirror"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "websockets>=12.0",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
cex-mirror = "cex_mirror.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cex_mirror"]
