[project]
name = "cex-mirror"
version = "0.1.0"
description = "Lightweight, multi-pair, in-memory Binance -> my_cex order book mirror"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "websockets>=12.0",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    # Kafka market-lifecycle consumer (auto-add/remove pairs). Required: the service
    # runs with kafka.enabled: true and fails fast at startup if these are missing.
    # cramjam supplies the snappy/lz4/zstd/gzip decompression codecs aiokafka needs when
    # the producer compresses messages (snappy is a common broker/producer default).
    "aiokafka>=0.10",
    "cramjam>=2.7",
    # Round-trip YAML so runtime add/remove of pairs preserves config.yaml comments.
    "ruamel.yaml>=0.18",
]

[project.scripts]
cex-mirror = "cex_mirror.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cex_mirror"]
